--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manor Carnie Blast</title>
-    <link rel="icon" href="image/Icon 500_500.png" />
+    <title>Ocean Match Puzzle Game Blast</title>
+    <link rel="icon" href="img/fav ic.png" />
 
     <link
       rel="stylesheet"
@@ -27,6 +27,15 @@
       <div class="header__background"></div>
       <nav class="navigation">
         <ul class="navigation__list">
+          <li>
+            <a href="/" class="navigation-img"
+              ><img
+                href="/"
+                src="img/header/image 120.png"
+                class="header-title"
+                alt=""
+            /></a>
+          </li>
           <li class="navigation__item">
             <a href="/" class="navigation__link"
               ><img href="/" class="header-title navigation-img" alt=""
@@ -36,43 +45,39 @@
             <a href="/" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About</a>
+            <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
+          <li class="navigation__item">
+            <a href="/#about" class="navigation__link">About the Game</a>
+          </li>
+
           <li class="navigation__item">
             <a href="/#how" class="navigation__link">How to Play</a>
           </li>
           <li class="navigation__item">
-            <a href="/#spotlight" class="navigation__link"
-              >carnival spotlight</a
-            >
-          </li>
-          <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Features</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Reviews</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Gallery</a>
+            <a href="/#features" class="navigation__link">Game Features</a>
           </li>
         </ul>
 
         <div class="header__button-wrapper policy-terms-header__button-wrapper">
           <a href="/" class="policy-terms-header__icon--menu"
-            ><img href="/" class="header-title" alt=""
+            ><img
+              href="/"
+              src="img/header/image 120.png"
+              class="header-title"
+              alt=""
           /></a>
 
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/header/Menu.png"
+              src="img/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="image/header/Menu (1).png"
+              src="img/header/сross.png"
               alt=""
             />
           </button>
@@ -83,251 +88,24 @@
     <main class="main">
       <section class="home" id="home">
         <div class="home__container-top">
-          <p class="home-title">Carnival Fun & Match-3 Challenges!</p>
-          <p class="home-title-two">Manor Carnie Blast</p>
+          <img class="home-title" src="/img/home/logo.png" alt="" />
+
           <p class="home-text">
-            Dive into the carnival excitement and solve puzzles to restore the
-            manor!
+            Dive into a vibrant underwater world full of puzzles and adventure!
           </p>
           <a
             class="home__google-button_link"
-            href="https://play.google.com/store/apps/details?id=com.candy.manor.carnie.blast"
+            href="https://play.google.com/store/apps/details?id=com.puzzle.game.match3.ocean.fish.studio"
             target="_blank"
           >
             <img
               class="home__google-button_image"
-              src="./image/home/Button.png"
+              src="./img/home/Store button.png"
               alt=""
             />
           </a>
         </div>
       </section>
-      <section class="about" id="about">
-        <h2 class="about-title">About</h2>
-        <div class="about-container">
-          <p class="about-text">
-            Manor Carnie Blast is a thrilling match-3 puzzle game where players
-            enter a magical carnival world to restore an old manor to its former
-            glory. Match colorful carnival-themed items, solve challenging
-            puzzles, and unlock exciting rewards to bring the joy of the
-            carnival back to life.
-          </p>
-          <p class="about-text-two">
-            With a captivating story and whimsical characters, Manor Carnie
-            Blast is perfect for fans of puzzles, design, and carnival fun!
-          </p>
-        </div>
-      </section>
-      <section class="how" id="how">
-        <h2 class="about-title">How to Play</h2>
-        <ul class="how-list">
-          <li class="how-item">
-            <p class="how-text-bold">
-              Uncover <br />
-              the Story
-            </p>
-            <p class="how-text">
-              Progress through the game to reveal hidden secrets and expand the
-              carnival world.
-            </p>
-          </li>
-          <li class="how-item">
-            <p class="how-text-bold how-text-bold-two">Participate in Events</p>
-            <p class="how-text">
-              Take part in seasonal challenges and win exclusive decorations for
-              the manor.
-            </p>
-          </li>
-          <li class="how-item">
-            <p class="how-text-bold how-text-bold-three">Use Power-Ups</p>
-            <p class="how-text">
-              Unlock and strategically use boosters like fireworks or popcorn
-              blasts to tackle tough levels.
-            </p>
-          </li>
-          <li class="how-item">
-            <p class="how-text-bold how-text-bold-four">Complete Objectives</p>
-            <p class="how-text">
-              Finish level-specific tasks like collecting items or clearing
-              obstacles.
-            </p>
-          </li>
-          <li class="how-item">
-            <p class="how-text-bold how-text-bold-five">
-              Match <br />
-              Items
-            </p>
-            <p class="how-text">
-              Combine three or more carnival-themed objects (e.g., balloons,
-              popcorn) to clear them and earn points.
-            </p>
-          </li>
-          <li class="how-item">
-            <p class="how-text-bold how-text-bold-six">
-              Earn <br />
-              Coins
-            </p>
-            <p class="how-text">
-              Use coins earned in levels to renovate and decorate the manor with
-              your unique style.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="spotlight" id="spotlight">
-        <div class="spotlight-container">
-          <h1 class="spotlight-title">
-            CARNIVAL <br />
-            SP<span class="icon"
-              ><img src="/image/spotlight/Mask group.png" alt="P" /></span
-            >TLIGHT
-          </h1>
-
-          <div class="cards">
-            <div class="card card-blue">
-              <div class="card-texts">
-                <h2 class="card-title">Leaderboard</h2>
-                <p class="card-text">
-                  Compete with friends to see who can score the most in weekly
-                  challenges.
-                </p>
-              </div>
-            </div>
-            <div class="card card-orange">
-              <div class="card-texts-two">
-                <h2 class="card-title">Mini-Games</h2>
-                <p class="card-text">
-                  Enjoy bonus challenges like ring toss or dunk tank for extra
-                  coins.
-                </p>
-              </div>
-            </div>
-            <div class="card card-lightblue">
-              <div class="card-texts">
-                <h2 class="card-title">DAILY SPINS</h2>
-                <p class="card-text">
-                  Win rewards with the Carnival Wheel of Fortune!
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="features" id="features">
-        <h2 class="about-title">Features</h2>
-
-        <ul class="features-list">
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (1).png"
-              alt=""
-            />
-            <p class="features-text-bold">Whimsical Match-3 Gameplay</p>
-            <p class="features-text">
-              Fun and colorful puzzles with carnival-themed items.
-            </p>
-          </li>
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (2).png"
-              alt=""
-            />
-            <p class="features-text-bold">Manor Renovation</p>
-            <p class="features-text">
-              Customize and decorate the manor with a wide variety of festive
-              designs.
-            </p>
-          </li>
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (3).png"
-              alt=""
-            />
-            <p class="features-text-bold">Engaging Storyline</p>
-            <p class="features-text">
-              Follow a heartwarming story filled with surprises and laughter.
-            </p>
-          </li>
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (4).png"
-              alt=""
-            />
-            <p class="features-text-bold">Charming Characters</p>
-            <p class="features-text">
-              Meet unique carnival performers who help you on your journey.
-            </p>
-          </li>
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (5).png"
-              alt=""
-            />
-            <p class="features-text-bold">Special Events</p>
-            <p class="features-text">
-              Seasonal challenges with exciting rewards to keep the fun going.
-            </p>
-          </li>
-          <li class="features-item">
-            <img
-              class="features-img"
-              src="/image/Features/Mask group (6).png"
-              alt=""
-            />
-            <p class="features-text-bold">Stunning Visuals</p>
-            <p class="features-text">
-              Bright and cheerful carnival settings with intricate details.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="reviews" id="reviews">
-        <h2 class="about-title">Reviews</h2>
-
-        <ul class="reviews-list">
-          <li class="reviews-item">
-            <p class="reviews-text">
-              The carnival theme is
-              <span class="reviews-text-bold">so vibrant and fun!</span> I love
-              restoring the manor piece by piece!
-            </p>
-            <img class="reviews-img" src="/image/reviews/Stars.png" alt="" />
-          </li>
-          <li class="reviews-item">
-            <p class="reviews-text">
-              This game combines puzzles and
-              <span class="reviews-text-bold">design perfectly</span>. Highly
-              recommend it!
-            </p>
-            <img
-              class="reviews-img"
-              src="/image/reviews/Stars (1).png"
-              alt=""
-            />
-          </li>
-          <li class="reviews-item">
-            <p class="reviews-text">
-              <span class="reviews-text-bold">A must-play for anyone</span>who
-              loves match-3 games with a creative twist.
-            </p>
-            <img class="reviews-img" src="/image/reviews/Stars.png" alt="" />
-          </li>
-          <li class="reviews-item">
-            <p class="reviews-text">
-              <span class="reviews-text-bold">I can’t get enough </span> of the
-              mini-games and the adorable carnival characters!
-            </p>
-            <img class="reviews-img" src="/image/reviews/Stars.png" alt="" />
-          </li>
-        </ul>
-      </section>
-
       <section class="gallery" id="gallery">
         <h2 class="about-title">Gallery</h2>
 
@@ -335,39 +113,147 @@
           <li class="gallery__item">
             <img
               class="gallery__image"
-              src="./image/gallery/Screenshot.png"
+              src="./img/gallery/1 gallery.png"
               alt=""
             />
           </li>
           <li class="gallery__item">
             <img
               class="gallery__image"
-              src="./image/gallery/Screenshot (1).png"
+              src="./img/gallery/2 gallery.png"
+              alt=""
+            />
+          </li>
+
+          <li class="gallery__item">
+            <img
+              class="gallery__image"
+              src="./img/gallery/3 gallery.png"
               alt=""
             />
           </li>
           <li class="gallery__item">
             <img
               class="gallery__image"
-              src="./image/gallery/Screenshot (2).png"
+              src="./img/gallery/4 gallery.png"
               alt=""
             />
           </li>
           <li class="gallery__item">
             <img
               class="gallery__image"
-              src="./image/gallery/Screenshot (3).png"
+              src="./img/gallery/5 gallery.png"
               alt=""
             />
           </li>
           <li class="gallery__item">
             <img
               class="gallery__image"
-              src="./image/gallery/Screenshot (4).png"
+              src="./img/gallery/5 gallery (1).png"
               alt=""
             />
           </li>
         </ul>
+      </section>
+      <section class="about" id="about">
+        <div class="about-container">
+          <h2 class="about-title">About the Game</h2>
+          <p class="about-text">
+            Ocean Match 3 is a captivating puzzle game set in a colorful
+            underwater world. Match vibrant sea-themed tiles to progress through
+            levels, solve puzzles, and unlock rewards. Immerse yourself in
+            stunning visuals and relaxing gameplay as you explore the ocean
+            depths with its exciting challenges and adorable marine creatures.
+          </p>
+        </div>
+      </section>
+      <section class="how" id="how">
+        <h2 class="about-title">How to Play</h2>
+        <ul class="how-list">
+          <li class="how-item">
+            <p class="how-text">
+              Match three or more sea-themed tiles to clear them and earn
+              points.
+            </p>
+          </li>
+          <li class="how-item how-text-bold-two">
+            <p class="how-text">
+              Complete objectives such as collecting specific tiles or clearing
+              obstacles.
+            </p>
+          </li>
+          <li class="how-item how-text-bold-three">
+            <p class="how-text">
+              Use boosters and power-ups to solve challenging puzzles.
+            </p>
+          </li>
+          <li class="how-item how-text-bold-four">
+            <p class="how-text">
+              Plan your moves carefully to make the most of limited turns.
+            </p>
+          </li>
+          <li class="how-item how-text-bold-five">
+            <p class="how-text">
+              Progress through the map and unlock new underwater areas.
+            </p>
+          </li>
+          <li class="how-item how-text-bold-six">
+            <p class="how-text">
+              Participate in events and daily challenges for extra rewards.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="features" id="features">
+        <h2 class="about-title">Game Features</h2>
+
+        <ul class="features-list">
+          <li class="features-item">
+            <p class="features-text">
+              Explore a vibrant underwater world filled with colorful marine
+              life.
+            </p>
+          </li>
+
+          <li class="features-item">
+            <p class="features-text">
+              Enjoy hundreds of levels with unique challenges and objectives.
+            </p>
+          </li>
+          <li class="features-item features-item-pudding">
+            <p class="features-text">
+              Unlock boosters and combos to overcome tricky puzzles.
+            </p>
+          </li>
+          <li class="features-item">
+            <p class="features-text">
+              Relax with visually stunning graphics and calming ocean sounds.
+            </p>
+          </li>
+          <li class="features-item">
+            <p class="features-text">
+              Engage in special events for extra rewards and fun surprises.
+            </p>
+          </li>
+          <li class="features-item">
+            <p class="features-text">
+              Perfect for casual play but engaging enough to keep you coming
+              back.
+            </p>
+          </li>
+        </ul>
+        <a
+          class="home__google-button_link"
+          href="https://play.google.com/store/apps/details?id=com.puzzle.game.match3.ocean.fish.studio"
+          target="_blank"
+        >
+          <img
+            class="features-image"
+            src="./img/home/Store button.png"
+            alt=""
+          />
+        </a>
       </section>
     </main>
 
@@ -375,14 +261,13 @@
       <div class="footer-container">
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy policy</a>
-          <a class="footer-text" href="terms.html">terms and conditions</a>
+          <a class="footer-text" href="terms.html">Terms and conditions</a>
         </div>
         <p class="footer-copyright">
-          ©2025 SweetWingLow.com, All rights reserved.
+          All rights reserved cooljoydash.com | 2025
         </p>
       </div>
     </footer>
-
     <script src="js/mobile-menu.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
