--- a/policy.html
+++ b/policy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manor Carnie Blast</title>
-    <link rel="icon" href="image/Icon 500_500.png" />
+    <title>Ocean Match Puzzle Game Blast</title>
+    <link rel="icon" href="img/fav ic.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -15,6 +15,15 @@
       <div class="header__background"></div>
       <nav class="navigation">
         <ul class="navigation__list">
+          <li>
+            <a href="/" class="navigation-img"
+              ><img
+                href="/"
+                src="img/header/image 120.png"
+                class="header-title"
+                alt=""
+            /></a>
+          </li>
           <li class="navigation__item">
             <a href="/" class="navigation__link"
               ><img href="/" class="header-title navigation-img" alt=""
@@ -24,43 +33,39 @@
             <a href="/" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About</a>
+            <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
+          <li class="navigation__item">
+            <a href="/#about" class="navigation__link">About the Game</a>
+          </li>
+
           <li class="navigation__item">
             <a href="/#how" class="navigation__link">How to Play</a>
           </li>
           <li class="navigation__item">
-            <a href="/#spotlight" class="navigation__link"
-              >carnival spotlight</a
-            >
-          </li>
-          <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Features</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Reviews</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Gallery</a>
+            <a href="/#features" class="navigation__link">Game Features</a>
           </li>
         </ul>
 
         <div class="header__button-wrapper policy-terms-header__button-wrapper">
           <a href="/" class="policy-terms-header__icon--menu"
-            ><img href="/" class="header-title" alt=""
+            ><img
+              href="/"
+              src="img/header/image 120.png"
+              class="header-title"
+              alt=""
           /></a>
 
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/header/Menu.png"
+              src="img/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="image/header/Menu (1).png"
+              src="img/header/сross.png"
               alt=""
             />
           </button>
@@ -74,10 +79,10 @@
           <p class="policy-terms-title">PRIVACY POLICY</p>
 
           <p class="policy-terms-texts">
-            This privacy policy applies to the Manor Carnie Blast app (hereby
-            referred to as "Application") for mobile devices that was created by
-            (hereby referred to as "Service Provider") as a Free service. This
-            service is intended for use "AS IS".
+            This privacy policy applies to the Ocean Match Puzzle Game Blast app
+            (hereby referred to as "Application") for mobile devices that was
+            created by cooljoydash (hereby referred to as "Service Provider") as
+            a Free service. This service is intended for use "AS IS".
           </p>
           <p class="policy-terms-text">Information Collection and Use</p>
           <p class="policy-terms-texts">
@@ -193,7 +198,7 @@
             The Service Provider will retain User Provided data for as long as
             you use the Application and for a reasonable time thereafter. If
             you'd like them to delete User Provided Data that you have provided
-            via the Application, please contact them at mcblast@info.com and
+            via the Application, please contact them at cooljoydash@info.com and
             they will respond in a reasonable time.
           </p>
           <h2 class="policy-terms-text">Children</h2>
@@ -210,8 +215,8 @@
             personal information, the Service Provider will immediately delete
             this from their servers. If you are a parent or guardian and you are
             aware that your child has provided us with personal information,
-            please contact the Service Provider (mcblast@info.com) so that they
-            will be able to take the necessary actions.
+            please contact the Service Provider (cooljoydash@info.com) so that
+            they will be able to take the necessary actions.
           </p>
           <h2 class="policy-terms-text">Security</h2>
           <p class="policy-terms-texts">
@@ -230,7 +235,7 @@
           </p>
 
           <p class="policy-terms-text-one">
-            This privacy policy is effective as of 2025-01-07
+            This privacy policy is effective as of 2025-01-08
           </p>
           <h2 class="policy-terms-text">Your Consent</h2>
           <p class="policy-terms-texts">
@@ -243,8 +248,8 @@
             If you have any questions or suggestions about the Terms and
             Conditions, please do not hesitate to contact the Service Provider
             at
-            <a class="email-link" href="mailto:mcblast@info.com"
-              >mcblast@info.com</a
+            <a class="email-link" href="mailto:cooljoydash@info.com"
+              >cooljoydash@info.com</a
             >.
           </p>
         </div>
@@ -255,10 +260,10 @@
       <div class="footer-container">
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy policy</a>
-          <a class="footer-text" href="terms.html">terms and conditions</a>
+          <a class="footer-text" href="terms.html">Terms and conditions</a>
         </div>
         <p class="footer-copyright">
-          ©2025 SweetWingLow.com, All rights reserved.
+          All rights reserved cooljoydash.com | 2025
         </p>
       </div>
     </footer>
